Changed web to require sign up before beginning tutorial to prevent losing data after tab is closed.

--- a/frontend/site/docker/nginx.extendedmind.conf
+++ b/frontend/site/docker/nginx.extendedmind.conf
@@ -4,7 +4,7 @@ server {
   server_name localhost;
 
   # 1. app paths, and rewrite them to index.html
-  location ~* ^/(my|entry|login|collective|new|unsupported|verify|reset|accept|invalid|admin) {
+  location ~* ^/(my|entry|login|collective|signup|unsupported|verify|reset|accept|invalid|admin) {
     root /var/www/extendedmind;
     rewrite ~* /index.html break;
   }
