--- a/pom.xml
+++ b/pom.xml
@@ -322,6 +322,11 @@
           <artifactId>docker-maven-plugin</artifactId>
           <version>0.13.3</version>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <version>1.8</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
