--- a/frontend/electron/pom.xml
+++ b/frontend/electron/pom.xml
@@ -220,5 +220,12 @@
         </configuration>
       </plugin>
     </plugins>
+    <extensions>
+      <extension>
+        <groupId>com.github.shyiko.servers-maven-extension</groupId>
+        <artifactId>servers-maven-extension</artifactId>
+        <version>1.2.0</version>
+      </extension>
+    </extensions>
   </build>
 </project>
