Better linux packaging

--- a/frontend/electron/templates/app/package.json
+++ b/frontend/electron/templates/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "extended-mind-desktop",
+  "name": "extended-mind",
   "version": "${project.version.node}",
   "description": "Extended Mind Desktop",
   "main": "main.js"
