--- a/frontend/cordova/src/main/resources/ios/extmd-Info.plist
+++ b/frontend/cordova/src/main/resources/ios/extmd-Info.plist
@@ -146,7 +146,7 @@
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleVersion</key>
-    <string>${cordova.buildNumber}</string>
+    <string>${buildNumber}</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
     <key>NSMainNibFile</key>
