--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     <phantomjs.version>1.9.7</phantomjs.version>
     <jetty.version>9.0.4.v20130625</jetty.version>
     <docker.skip>true</docker.skip>
+    <buildNumber>0</buildNumber>
   </properties>
 
   <repositories>
