Fixed node downloading not working anymore because of server using ssl

--- a/frontend/site/pom.xml
+++ b/frontend/site/pom.xml
@@ -61,6 +61,7 @@
             <configuration>
               <nodeVersion>v0.12.7</nodeVersion>
               <npmVersion>2.12.1</npmVersion>
+              <nodeDownloadRoot>https://nodejs.org/dist/</nodeDownloadRoot>
             </configuration>
           </execution>
           <execution>
