Added backend link to site and logging of new backend /info path on boot

--- a/e2e/pom.xml
+++ b/e2e/pom.xml
@@ -308,6 +308,9 @@
                     <image>site-conf</image>
                   </from>
                 </volumes>
+                <links>
+                  <link>backend:backend</link>
+                </links>
               </run>
             </image>
             <image>
