Fixed destroy user failing to get deleted owners. Added synchronization blocks to calls to ByteBuffer. Added backend to port 8007 in e2e tests

--- a/e2e/pom.xml
+++ b/e2e/pom.xml
@@ -280,6 +280,9 @@
                     <image>backend-data</image>
                   </from>
                 </volumes>
+                <ports>
+                  <port>8007:8081</port>
+                </ports>
               </run>
             </image>
             <image>
