--- a/frontend/site/src/package.json
+++ b/frontend/site/src/package.json
@@ -10,8 +10,9 @@
     "koa-nunjucks-2": "^1.0.3",
     "koa-route": "^2.4.2",
     "koa-static-folder": "^0.1.5",
+    "markdown-it": "^4.4.0",
     "path": "^0.11.14",
-    "request": "^2.61.0",
+    "superagent": "^1.4.0",
     "thunkify": "^2.1.2"
   },
   "devDependencies": {},
