Added app group entitlements

--- a/frontend/cordova/app/platforms/ios/extmd-share/Info.plist
+++ b/frontend/cordova/app/platforms/ios/extmd-share/Info.plist
@@ -25,10 +25,15 @@
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
-		<dict>
-			<key>NSExtensionActivationRule</key>
-			<string>TRUEPREDICATE</string>
-		</dict>
+        <dict>
+            <key>NSExtensionActivationRule</key>
+            <dict>
+                <key>NSExtensionActivationSupportsWebURLWithMaxCount</key>
+                <integer>1</integer>
+            </dict>
+            <key>NSExtensionJavaScriptPreprocessingFile</key>
+            <string>SharePreprocessor</string>
+        </dict>
 		<key>NSExtensionMainStoryboard</key>
 		<string>MainInterface</string>
 		<key>NSExtensionPointIdentifier</key>
