--- a/frontend/cordova/app/platforms/ios/extmd/extmd.entitlements
+++ b/frontend/cordova/app/platforms/ios/extmd/extmd.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.extendedmind</string>
+		<string>group.org.extendedmind</string>
 	</array>
 </dict>
 </plist>
