--- a/frontend/site/src/package.json
+++ b/frontend/site/src/package.json
@@ -5,12 +5,16 @@
   "private": true,
   "main": "server.js",
   "dependencies": {
+    "jsdom": "^6.5.1",
     "koa": "^1.0.0",
     "koa-logger": "^1.3.0",
     "koa-nunjucks-2": "^1.0.3",
     "koa-route": "^2.4.2",
+    "koa-sendfile": "^1.1.1",
     "koa-static-folder": "^0.1.5",
+    "madoko": "^0.9.9-beta",
     "markdown-it": "^4.4.0",
+    "mkdirp": "^0.5.1",
     "path": "^0.11.14",
     "superagent": "^1.4.0",
     "thunkify": "^2.1.2"
