--- a/frontend/site/src/package.json
+++ b/frontend/site/src/package.json
@@ -17,6 +17,7 @@
     "mkdirp": "^0.5.1",
     "path": "^0.11.14",
     "superagent": "^1.4.0",
+    "temp": "^0.8.3",
     "thunkify": "^2.1.2"
   },
   "devDependencies": {},
