--- a/frontend/site/src/package.json
+++ b/frontend/site/src/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Extended Mind Site",
   "private": true,
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "babel-core": "^6.0.20",
     "babel-plugin-syntax-async-functions": "^6.0.14",
@@ -15,6 +15,7 @@
     "koa": "^2.0.0-alpha.2",
     "koa-convert": "^1.0.0",
     "koa-logger": "^1.3.0",
+    "koa-sendfile": "^1.1.1",
     "koa-static-folder": "^0.1.5",
     "madoko": "^0.9.12-beta",
     "markdown-it": "^4.4.0",
@@ -25,7 +26,8 @@
     "path-to-regexp": "^1.2.0",
     "superagent": "^1.4.0",
     "superagent-promise": "^1.0.3",
-    "extendedmind-siteutils": "^1.0.0"
+    "temp": "^0.8.3",
+    "thunkify": "^2.1.2"
   },
   "devDependencies": {},
   "scripts": {
