--- a/frontend/site/src/package.json
+++ b/frontend/site/src/package.json
@@ -5,27 +5,18 @@
   "private": true,
   "main": "server.js",
   "dependencies": {
-    "babel-core": "^6.0.20",
-    "babel-plugin-syntax-async-functions": "^6.0.14",
-    "babel-plugin-syntax-async-generators": "^6.0.15",
-    "babel-preset-stage-0": "^6.0.15",
-    "etag": "^1.7.0",
-    "fs-promise": "^0.3.1",
     "jsdom": "^6.5.1",
-    "koa": "^2.0.0-alpha.2",
-    "koa-convert": "^1.0.0",
+    "koa": "^1.0.0",
     "koa-logger": "^1.3.0",
+    "koa-nunjucks-2": "^1.0.3",
+    "koa-route": "^2.4.2",
     "koa-sendfile": "^1.1.1",
     "koa-static-folder": "^0.1.5",
-    "madoko": "^0.9.12-beta",
+    "madoko": "^0.9.9-beta",
     "markdown-it": "^4.4.0",
-    "methods": "~1.1.0",
-    "mkdirp-then": "^1.1.0",
-    "nunjucks": "^2.1.0",
+    "mkdirp": "^0.5.1",
     "path": "^0.11.14",
-    "path-to-regexp": "^1.2.0",
     "superagent": "^1.4.0",
-    "superagent-promise": "^1.0.3",
     "temp": "^0.8.3",
     "thunkify": "^2.1.2"
   },
