--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -37,7 +37,7 @@
   </developers>
 
   <properties>
-    <neo4j.version>2.2.7</neo4j.version>
+    <neo4j.version>2.3.0</neo4j.version>
     <spray.version>1.3.3</spray.version>
     <akka.version>2.3.9</akka.version>
   </properties>
@@ -75,7 +75,7 @@
     <dependency>
       <groupId>io.spray</groupId>
       <artifactId>spray-json_${scala.version.short}</artifactId>
-      <version>1.3.1</version>
+      <version>1.3.2</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -132,9 +132,9 @@
 
     <!-- Scaldi -->
     <dependency>
-      <groupId>com.github.scaldi</groupId>
+      <groupId>org.scaldi</groupId>
       <artifactId>scaldi_${scala.version.short}</artifactId>
-      <version>0.2</version>
+      <version>0.5.6</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
