--- a/pom.xml
+++ b/pom.xml
@@ -328,6 +328,11 @@
           <artifactId>build-helper-maven-plugin</artifactId>
           <version>1.8</version>
         </plugin>
+        <plugin>
+          <groupId>com.github.eirslett</groupId>
+          <artifactId>frontend-maven-plugin</artifactId>
+          <version>0.0.23</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
