Fixed using owner display name in share list request. Added undebugged version of invite email.

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -50,7 +50,9 @@ extendedmind {
     templates {
       # Set this to use custom emails 
       # directory = "custom_email_template_directory"
-      shareListTitle = "inviterEmail shared a list with you"
+      inviteTitle = "inviterDisplayName invited you to join extended mind"
+      joinInviteURI = "/join/inviteValue?email=emailValue"
+      shareListTitle = "proposedByDisplayName shared a list with you"
       acceptShareURI = "/accept/shareValue?email=emailValue"
       resetPasswordTitle = "password reset instructions"
       resetPasswordURI = "/reset/resetCodeValue?email=emailValue"
